# AUtomatisation

./: .env.example  .gitignore  .replit  ANTI_BAN_GUIDE.md  API_DOCUMENTATION.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_COMPLETE.md  PROBLEME_GEMINI.md  PRODUCT_PAGE.md  QUICKSTART.md  RAPPORT_ANALYSE_SYSTEME.md  RAPPORT_COMPLET.md  README.md  README_GUMROAD.md  README_PUBLIC.md  RECAP_FINAL.md  RELEASE_CHECKLIST.md  ROADMAP.md  ROLLBACK_PLAN.md  SETUP_APIS.md  SETUP_SUPABASE.md  SMOKE_TEST_CHECKLIST.md  STATUS.md  WIKI.md  ab_tester.py  ab_testing.py  advanced_analytics.py  ai_generator.py  ai_image_fallback.py  ai_provider.py  alert_system.py  analytics.py  analytics_tracker.py  article_config.json  audit_system.py  auto_runner.py  ban_detector.py  brand_config.json  build_exe.py  (+84 more)
app/: __init__.py  csrf.py  i18n.py  utils.py
attached_assets/: Pasted-Here-is-the-complete-prompt-to-send-to-Replit-I-need-yo_1774124871083.txt  Pasted-Here-is-the-prompt-to-send-to-Replit-right-now-Stop-all_1774167065098.txt  Pasted-I-need-you-to-do-a-full-analysis-of-the-current-codebas_1774159668860.txt  Pasted-Perfect-That-s-the-clearest-possible-answer-and-it-unlo_1774122339024.txt  Pasted-Phase-1-is-done-and-done-correctly-That-is-a-solid-foun_1774166558630.txt  Pasted-Phase-1-now-Multi-platform-publishing-You-re-Facebook-o_1774121915312.txt  Pasted-This-is-a-genuinely-sharp-response-from-Replit-let-me-g_1774122176021.txt  Pasted-This-is-an-outstanding-plan-from-Replit-Genuinely-one-o_1774160167317.txt  content_factory_2026_design_1774168112638.html  (+1 more)
engine/: __init__.py  (+19 more)
(+129 files in other folders)
